# chat

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  NOTES.md  README.md  cmake.yml
.github/workflows/: cmake.yml
classes/: DoubleBuffer.cpp  DoubleBuffer.hpp  Log.hpp  Message.cpp  Message.hpp  QueryType.hpp  User.cpp  User.hpp
classes/include/: DoubleBuffer.hpp  InteractionStage.hpp  Log.hpp  Request.hpp  RequestType.hpp  Utility.hpp
classes/src/: DoubleBuffer.cpp  Request.cpp
client/: CMakeLists.txt  Client.cpp  Client.hpp  Connection.hpp  GUI.hpp  main.cpp
client-server/: CMakeLists.txt  client-server.cpp  client-server.h  main.cpp
client-server/include/: DoubleBuffer.hpp  Request.hpp  Utility.hpp  client-server.h  client-server.hpp  client.hpp  helper.hpp  server.hpp
client-server/src/: DoubleBuffer.cpp  Request.cpp  client-server.cpp  client.cpp  server.cpp
client/include/: client.hpp
common/: CMakeLists.txt
common/include/: DoubleBuffer.hpp  Log.hpp  Message.hpp  RequestQueue.hpp  User.hpp  Utility.hpp
common/sources/: DoubleBuffer.cpp  Message.cpp  User.cpp
mock_stream/: CMakeLists.txt  MockStream.cpp  MockStream.hpp
request-tests/: CMakeLists.txt  all-tests.cpp  request-tests.hpp
server/: CMakeLists.txt  Chatroom.cpp  Chatroom.hpp  Connection.cpp  Connection.hpp  RequestHandlers.cpp  RequestHandlers.hpp  RoomService.cpp  RoomService.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  main.cpp
server/include/: Session.hpp  server.hpp
server/src/: Session.cpp  server.cpp
settings/: NOTE.md  dh1024.pem  dh2048.pem  gen-crt.sh  server.cfg  server.crt  server.csr  server.key
tests/: CMakeLists.txt  all-tests.cpp  message-tests.hpp  request-tests.hpp  session-tests.hpp  single-client-messaging-tests.hpp
